Quartz sync: May 16, 2024, 12:12 AM

--- a/content/4.Semester/4.Semester.md
+++ b/content/4.Semester/4.Semester.md
@@ -10,8 +10,8 @@ date modified: Wednesday, 8. May 2024, 17:56
 # Modules
 
 ## Info Modules
-- [[FSK|FSK (Formale Sprachen und Komplexität) ]] (in work)
-- [[RNVS|RNVS (Rechnernetze und Verteilte Systeme)]] (in work)
+- [[Formale Sprachen und Komplexität (FSK)|FSK (Formale Sprachen und Komplexität) ]] (in work)
+- [[Rechnernetze und Verteilte Systeme (RNVS)|RNVS (Rechnernetze und Verteilte Systeme)]] (in work)
 - [[IT-Kompetenz]]
 - [[Bachelorseminar-Software Security]] (in work)
 
