--- a/content/4.Semester/Informatik/FSK/FSK-Vorlesungen/FSK-2-VL/FSK-2VL-23-04-2024.md
+++ b/content/4.Semester/Informatik/FSK/FSK-Vorlesungen/FSK-2-VL/FSK-2VL-23-04-2024.md
@@ -4,7 +4,7 @@ tags:
   - FSK
   - vorlesung
   - informatik
-fach: "[[Uni2/Semester/4.Semester/Informatik/FSK/FSK]]"
+fach: "[[Formale Sprachen und Komplexität (FSK)]]"
 Thema: 
 date created: Tuesday, 23. April 2024, 14:29
 date modified: Tuesday, 23. April 2024, 23:44
