--- a/content/4.Semester/Informatik/FSK/FSK-Vorlesungen/FSK-4-VL/FSK-4VL-07-05-24.md
+++ b/content/4.Semester/Informatik/FSK/FSK-Vorlesungen/FSK-4-VL/FSK-4VL-07-05-24.md
@@ -3,9 +3,9 @@ tags:
   - 4semester
   - FSK
   - informatik
-fach: "[[FSK]]"
+fach: "[[Formale Sprachen und Komplexität (FSK)]]"
 Thema: 
-Benötigte Zeit:
+Benötigte Zeit: 
 date created: Tuesday, 7. May 2024, 14:22
 date modified: Wednesday, 8. May 2024, 13:11
 ---
