--- a/content/4.Semester/Informatik/FSK/FSK-Vorlesungen/FSK-5-VL/FSK-5VL-14-05-2024.md
+++ b/content/4.Semester/Informatik/FSK/FSK-Vorlesungen/FSK-5-VL/FSK-5VL-14-05-2024.md
@@ -4,9 +4,9 @@ tags:
   - FSK
   - informatik
   - vorlesung
-fach: "[[FSK]]"
+fach: "[[Formale Sprachen und Komplexität (FSK)]]"
 Thema: 
-Benötigte Zeit:
+Benötigte Zeit: 
 date created: Tuesday, 14. May 2024, 12:04
 date modified: Tuesday, 14. May 2024, 12:26
 ---
