--- a/content/4.Semester/Informatik/FSK/FSK-Zentralübung/FSK-03-ZÜ-15-05-2024.md
+++ b/content/4.Semester/Informatik/FSK/FSK-Zentralübung/FSK-03-ZÜ-15-05-2024.md
@@ -3,9 +3,9 @@ tags:
   - 4semester
   - FSK
   - informatik
-fach: "[[FSK]]"
+fach: "[[Formale Sprachen und Komplexität (FSK)]]"
 Thema: 
-Benötigte Zeit:
+Benötigte Zeit: 
 date created: Wednesday, 15. May 2024, 12:23
 date modified: Wednesday, 15. May 2024, 17:42
 ---
