--- a/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-2VL-26-04-2024/RNVS-2VL-26-04-2024.md
+++ b/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-2VL-26-04-2024/RNVS-2VL-26-04-2024.md
@@ -4,7 +4,7 @@ tags:
   - RNVS
   - vorlesung
   - informatik
-fach: "[[RNVS]]"
+fach: "[[Rechnernetze und Verteilte Systeme (RNVS)]]"
 Thema:
   - "[[Modularität]]"
   - "[[Rechnernetze]]"
