--- a/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-3VL-03-05-2024/RNVS-3VL-03-05-2024.md
+++ b/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-3VL-03-05-2024/RNVS-3VL-03-05-2024.md
@@ -4,7 +4,7 @@ tags:
   - informatik
   - RNVS
   - vorlesung
-fach: "[[RNVS]]"
+fach: "[[Rechnernetze und Verteilte Systeme (RNVS)]]"
 Thema: "[[TCP]]"
 Benötigte Zeit: 
 date created: Thursday, 2. May 2024, 23:16
