--- a/content/3.Semester/3.Semester.md
+++ b/content/3.Semester/3.Semester.md
@@ -8,7 +8,7 @@ date modified: Monday, 6. May 2024, 17:21
 
 # Module
 
-- [[DBS|Datenbanksysteme (DBS)]]
+- [[Datenbanksysteme (DBS)|Datenbanksysteme (DBS)]]
 - [Softwaretechnik (SWT)](https://hustle-swt.vercel.app/)
 
 # Additional Modules
