--- a/content/4.Semester/Informatik/FSK/FSK-Vorlesungen/FSK-3-VL/FSK-3VL-30-04-24.md
+++ b/content/4.Semester/Informatik/FSK/FSK-Vorlesungen/FSK-3-VL/FSK-3VL-30-04-24.md
@@ -4,9 +4,9 @@ tags:
   - FSK
   - informatik
   - vorlesung
-fach: "[[FSK]]"
+fach: "[[Formale Sprachen und Komplexität (FSK)]]"
 Thema: 
-Benötigte Zeit:
+Benötigte Zeit: 
 date created: Tuesday, 30. April 2024, 13:22
 date modified: Friday, 3. May 2024, 20:46
 ---
