Quartz sync: May 22, 2024, 2:59 AM

--- a/content/3.Semester/3.Semester.md
+++ b/content/3.Semester/3.Semester.md
@@ -1,7 +1,7 @@
 ---
 Thema:
-tags: 
-fach: 
+tags:
+fach:
 date created: Monday, 11. March 2024, 14:30
 date modified: Monday, 6. May 2024, 17:21
 ---
@@ -14,3 +14,20 @@ date modified: Monday, 6. May 2024, 17:21
 # Additional Modules
 
 Currently, no other modules are planned for this semester, as I started this project towards the end of my third semester. If you would like me to incorporate my study notes retrospectively, please send me an email. Should there be sufficient interest, I will consider adding the specified module.
+
+<!-- Konfiguration für Remark42 -->
+<script>
+  var remark_config = {
+    host: 'http://localhost:8080', // URL deiner Remark42-Instanz
+    site_id: 'remark',             // Die SITE_ID, die du in der Docker-Konfiguration festgelegt hast
+    components: ['embed'],         // Optional: Definiert die Remark42-Komponenten, die geladen werden sollen
+  };
+</script>
+
+<!-- Remark42-Script laden -->
+<script>
+  !function(e,t){for(var r=0;r<e.length;r++){var n=t.createElement("script"),o=".js",c=t.head||t.body;"noModule"in n?(n.type="module",o=".mjs"):n.async=!0,n.defer=!0,n.src=remark_config.host+"/web/"+e[r]+o,c.appendChild(n)}}(remark_config.components||["embed"],document);
+</script>
+
+<!-- Platzhalter für das Kommentar-Widget -->
+<div id="remark42"></div>
