Quartz sync: May 22, 2024, 3:02 AM

--- a/content/3.Semester/3.Semester.md
+++ b/content/3.Semester/3.Semester.md
@@ -18,7 +18,7 @@ Currently, no other modules are planned for this semester, as I started this pro
 <!-- Konfiguration für Remark42 -->
 <script>
   var remark_config = {
-    host: 'http://localhost:8080', // URL deiner Remark42-Instanz
+    host: 'https://myuninotes.com/', // URL deiner Remark42-Instanz
     site_id: 'remark',             // Die SITE_ID, die du in der Docker-Konfiguration festgelegt hast
     components: ['embed'],         // Optional: Definiert die Remark42-Komponenten, die geladen werden sollen
   };
