Quartz sync: May 22, 2024, 3:53 AM

--- a/content/3.Semester/3.Semester.md
+++ b/content/3.Semester/3.Semester.md
@@ -1,11 +1,10 @@
 ---
-Thema:
-tags:
-fach:
-date created: Monday, 11. March 2024, 14:30
-date modified: Monday, 6. May 2024, 17:21
+Thema:  
+Tags: 
+Fach:
+Date Created: Monday, 11. March 2024, 14:30  
+Date Modified: Monday, 6. May 2024, 17:21
 ---
-
 # Module
 
 - [[Datenbanksysteme (DBS)|Datenbanksysteme (DBS)]]
@@ -15,19 +14,41 @@ date modified: Monday, 6. May 2024, 17:21
 
 Currently, no other modules are planned for this semester, as I started this project towards the end of my third semester. If you would like me to incorporate my study notes retrospectively, please send me an email. Should there be sufficient interest, I will consider adding the specified module.
 
-<!-- Konfiguration für Remark42 -->
+<!-- Configuration for Remark42 -->
 <script>
   var remark_config = {
-    host: 'https://myuninotes.com/', // URL deiner Remark42-Instanz
-    site_id: 'remark',             // Die SITE_ID, die du in der Docker-Konfiguration festgelegt hast
-    components: ['embed'],         // Optional: Definiert die Remark42-Komponenten, die geladen werden sollen
+    host: 'http://localhost:8080', // URL of your Remark42 instance
+    site_id: 'remark',             // The SITE_ID you set in the Docker configuration
+    components: ['embed'],         // Optional: Defines the Remark42 components to be loaded
   };
 </script>
 
-<!-- Remark42-Script laden -->
+<!-- Load Remark42 Script -->
 <script>
-  !function(e,t){for(var r=0;r<e.length;r++){var n=t.createElement("script"),o=".js",c=t.head||t.body;"noModule"in n?(n.type="module",o=".mjs"):n.async=!0,n.defer=!0,n.src=remark_config.host+"/web/"+e[r]+o,c.appendChild(n)}}(remark_config.components||["embed"],document);
+document.addEventListener('DOMContentLoaded', function() {
+  function loadScripts(scripts, document) {
+    scripts.forEach(function(scriptName) {
+      var script = document.createElement('script'),
+          extension = '.js',  // default extension
+          parentElement = document.head || document.body;
+
+      if ('noModule' in script) {
+        script.type = 'module';
+        extension = '.mjs';
+      } else {
+        script.async = true;
+        script.defer = true;
+      }
+
+      script.src = remark_config.host + '/web/' + scriptName + extension;
+      parentElement.appendChild(script);
+    });
+  }
+
+  loadScripts(remark_config.components || ['embed'], document);
+});
 </script>
 
-<!-- Platzhalter für das Kommentar-Widget -->
+
+<!-- Placeholder for the Comment Widget -->
 <div id="remark42"></div>
