Quartz sync: May 22, 2024, 4:07 AM

--- a/content/3.Semester/3.Semester.md
+++ b/content/3.Semester/3.Semester.md
@@ -1,10 +1,11 @@
 ---
-Thema:  
-Tags: 
-Fach:
-Date Created: Monday, 11. March 2024, 14:30  
-Date Modified: Monday, 6. May 2024, 17:21
+Thema:
+tags: 
+fach: 
+date created: Monday, 11. March 2024, 14:30
+date modified: Monday, 6. May 2024, 17:21
 ---
+
 # Module
 
 - [[Datenbanksysteme (DBS)|Datenbanksysteme (DBS)]]
@@ -13,42 +14,3 @@ Date Modified: Monday, 6. May 2024, 17:21
 # Additional Modules
 
 Currently, no other modules are planned for this semester, as I started this project towards the end of my third semester. If you would like me to incorporate my study notes retrospectively, please send me an email. Should there be sufficient interest, I will consider adding the specified module.
-
-<!-- Configuration for Remark42 -->
-<script>
-  var remark_config = {
-    host: 'http://localhost:8080', // URL of your Remark42 instance
-    site_id: 'remark',             // The SITE_ID you set in the Docker configuration
-    components: ['embed'],         // Optional: Defines the Remark42 components to be loaded
-  };
-</script>
-
-<!-- Load Remark42 Script -->
-<script>
-document.addEventListener('DOMContentLoaded', function() {
-  function loadScripts(scripts, document) {
-    scripts.forEach(function(scriptName) {
-      var script = document.createElement('script'),
-          extension = '.js',  // default extension
-          parentElement = document.head || document.body;
-
-      if ('noModule' in script) {
-        script.type = 'module';
-        extension = '.mjs';
-      } else {
-        script.async = true;
-        script.defer = true;
-      }
-
-      script.src = remark_config.host + '/web/' + scriptName + extension;
-      parentElement.appendChild(script);
-    });
-  }
-
-  loadScripts(remark_config.components || ['embed'], document);
-});
-</script>
-
-
-<!-- Placeholder for the Comment Widget -->
-<div id="remark42"></div>
