Quartz sync: May 24, 2024, 11:41 AM

--- a/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-5VL-17-05-2024/RNVS-5VL-17-05-2024.md
+++ b/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-5VL-17-05-2024/RNVS-5VL-17-05-2024.md
@@ -8,7 +8,7 @@ fach: "[[Rechnernetze und Verteilte Systeme (RNVS)]]"
 Thema: 
 Benötigte Zeit:
 date created: Thursday, 16. May 2024, 17:06
-date modified: Thursday, 16. May 2024, 18:10
+date modified: Friday, 24. May 2024, 09:21
 ---
 
 # Themen
@@ -281,3 +281,5 @@ Ab hier folgen Notizen aus der Vorlesung
 </div>
 
 ---
+
+Darauf folgte ein Gastvortrag und damit nicht besonders viel aufzuschreiben
