Quartz sync: May 24, 2024, 11:44 AM

--- a/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-6VL-24-05-2024/RNVS-6VL-24-05-2024.md
+++ b/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-6VL-24-05-2024/RNVS-6VL-24-05-2024.md
@@ -8,7 +8,7 @@ fach: "[[Rechnernetze und Verteilte Systeme (RNVS)]]"
 Thema: 
 Benötigte Zeit: 
 date created: Friday, 24. May 2024, 09:19
-date modified: Friday, 24. May 2024, 11:40
+date modified: Friday, 24. May 2024, 11:44
 ---
 
 Kapitel 3
@@ -20,7 +20,7 @@ Ende S.127
 - Client Server Paradigma
 - Zusammenfassung S.77
 
-# UDP - User Datagram Protcol (S.79)
+# UDP - User Datagram Protocol (S.79)
 
 Man kann in UDP in der Anwendungsschicht Sequenznummern und Quittungen implementieren
 
@@ -287,7 +287,6 @@ $$
 >
 > - **Effizienzsteigerung**: Durch die Möglichkeit, mehrere Pakete gleichzeitig zu senden, wird die verfügbare Bandbreite besser ausgenutzt.
 > - **Reduzierung der Wartezeiten**: Weniger Zeit wird mit Warten auf einzelne Bestätigungen verbracht, was die Gesamtübertragungszeit verkürzt.
-> - **Bessere Flusskontrolle**: Anpassung der Fenstergröße erlaubt eine flexible Handhabung unterschiedlicher Netzwerkbedingungen und Protokollanforderungen.
 >
 > ## Grundlegende Verfahren
 >
