Quartz sync: May 26, 2024, 6:07 PM

--- a/content/4.Semester/Informatik/FSK/FSK-Vorlesungen/FSK-3-VL/FSK-3VL-30-04-24.md
+++ b/content/4.Semester/Informatik/FSK/FSK-Vorlesungen/FSK-3-VL/FSK-3VL-30-04-24.md
@@ -11,7 +11,7 @@ date created: Tuesday, 30. April 2024, 13:22
 date modified: Friday, 3. May 2024, 20:46
 ---
 
-- [ ] Müllzustand DFAs wiederholen
+- [x] Müllzustand DFAs wiederholen [completion:: 2024-05-26]
 # Themen
 - **Skript:**
 	- vl-03a-ft-regularitaet-von-deterministischen-endlichen-automaten-und-nichtdeterministische-endliche-automaten
