Quartz sync: May 28, 2024, 2:27 PM

--- a/content/4.Semester/Informatik/FSK/FSK-Vorlesungen/FSK-6-VL/FSK-6VL-28-05-2024.md
+++ b/content/4.Semester/Informatik/FSK/FSK-Vorlesungen/FSK-6-VL/FSK-6VL-28-05-2024.md
@@ -7,7 +7,7 @@ fach: "[[Formale Sprachen und Komplexität (FSK)]]"
 Thema: 
 Benötigte Zeit: 
 date created: Monday, 27. May 2024, 21:01
-date modified: Monday, 27. May 2024, 21:27
+date modified: Tuesday, 28. May 2024, 14:21
 ---
 
 ---
@@ -363,3 +363,21 @@ Ab hier folgen Notizen aus der Vorlesung
 </div>
 
 ---
+
+# VL 0-6a
+
+## Leerheitsproblem
+
+>[!info] Satz
+>Das Leerheitsproblem für kontextfreie Grammatiken ist entscheidbar.
+
+>[!note] Beweis
+>Sei $G = (V, \Sigma, P, S)$ eine CFG mit 1. Sonderregel.
+>
+>Prüfe zunächst, ob $S \rightarrow \epsilon \in L(G)$. Wenn ja, dann ist $L(G)$ nicht leer.
+>
+>Sonst: Sei $G' = (V', \Sigma, P', S')$ eine CFG in Chomsky-Normalform mit $L(G') = L(G)$.
+>
+>Der folgende Algorithmus markiert alle $A \in V'$ mit $\{w \in \Sigma^* | A \Rightarrow_{G'}^* w\} \neq \emptyset$.
+>
+>Prüfe, ob $S'$ markiert wird. Wenn ja, dann ist $L(G) = L(G')$ nicht leer.
