Quartz sync: May 28, 2024, 2:30 PM

--- a/content/4.Semester/Informatik/FSK/FSK-Vorlesungen/FSK-6-VL/FSK-6VL-28-05-2024.md
+++ b/content/4.Semester/Informatik/FSK/FSK-Vorlesungen/FSK-6-VL/FSK-6VL-28-05-2024.md
@@ -7,7 +7,7 @@ fach: "[[Formale Sprachen und Komplexität (FSK)]]"
 Thema: 
 Benötigte Zeit: 
 date created: Monday, 27. May 2024, 21:01
-date modified: Tuesday, 28. May 2024, 14:21
+date modified: Tuesday, 28. May 2024, 14:29
 ---
 
 ---
@@ -16,6 +16,10 @@ Der unten stehende Teil wurde im Voraus aus dem Skript herausgearbeitet. Um zu d
 
 ---
 # VL 0-6a **Die Greibach-Normalform und Eigenschaften von kontextfreien Sprachen**
+
+<div style="position: relative; width: 100%; height: 0; padding-bottom: 56.25%;"><iframe src="https://www.youtube.com/embed/6kzcGvwmoXo" title="YouTube video player" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+
+<div style="position: relative; width: 100%; height: 0; padding-bottom: 56.25%;"><iframe src="https://www.youtube.com/embed/J4UuwoyYMKU" title="YouTube video player" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
 ## Themen
 
@@ -143,6 +147,9 @@ Die Greibach-Normalform ist ein fundamentales Konzept in der Theorie der kontext
 --- 
 # VL0-6b **CYK-Algorithmus**
 
+<div style="position: relative; width: 100%; height: 0; padding-bottom: 56.25%;"><iframe src="https://www.youtube.com/embed/GNHuct1Lj1E" title="YouTube video player" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+
+
 ## Themen
 
 1. Entscheidbarkeit und das Wortproblem für Typ 2-Grammatiken
@@ -232,6 +239,8 @@ Der CYK-Algorithmus ist ein leistungsfähiges Werkzeug zur Entscheidung des Wort
 
 --- 
 # VL0-6c **Kellerautomaten**
+
+<div style="position: relative; width: 100%; height: 0; padding-bottom: 56.25%;"><iframe src="https://www.youtube.com/embed/8Sw4xFD2hZQ" title="YouTube video player" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
 ## Themen
 
