--- a/content/4.Semester/Informatik/FSK/FSK-Vorlesungen/FSK-6-VL/FSK-6VL-28-05-2024.md
+++ b/content/4.Semester/Informatik/FSK/FSK-Vorlesungen/FSK-6-VL/FSK-6VL-28-05-2024.md
@@ -3,11 +3,12 @@ tags:
   - 4semester
   - FSK
   - informatik
+  - vorlesung
 fach: "[[Formale Sprachen und Komplexität (FSK)]]"
 Thema: 
 Benötigte Zeit: 
 date created: Monday, 27. May 2024, 21:01
-date modified: Tuesday, 28. May 2024, 14:29
+date modified: Tuesday, 28. May 2024, 14:40
 ---
 
 ---
