Quartz sync: May 28, 2024, 3:00 PM

--- a/content/4.Semester/Informatik/FSK/FSK-Vorlesungen/FSK-6-VL/FSK-6VL-28-05-2024.md
+++ b/content/4.Semester/Informatik/FSK/FSK-Vorlesungen/FSK-6-VL/FSK-6VL-28-05-2024.md
@@ -8,7 +8,7 @@ fach: "[[Formale Sprachen und Komplexität (FSK)]]"
 Thema: 
 Benötigte Zeit: 
 date created: Monday, 27. May 2024, 21:01
-date modified: Tuesday, 28. May 2024, 14:40
+date modified: Tuesday, 28. May 2024, 14:59
 ---
 
 ---
@@ -16,7 +16,7 @@ date modified: Tuesday, 28. May 2024, 14:40
 Der unten stehende Teil wurde im Voraus aus dem Skript herausgearbeitet. Um zu den Notizen aus der Vorlesung zu kommen, scrolle runter.
 
 ---
-# VL 0-6a **Die Greibach-Normalform und Eigenschaften von kontextfreien Sprachen**
+# VL 0-6a Die Greibach-Normalform und Eigenschaften von kontextfreien Sprachen
 
 <div style="position: relative; width: 100%; height: 0; padding-bottom: 56.25%;"><iframe src="https://www.youtube.com/embed/6kzcGvwmoXo" title="YouTube video player" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
@@ -146,7 +146,7 @@ Die korrekte Anwendung von Umwandlungsalgorithmen kann durch Beispielgrammatiken
 Die Greibach-Normalform ist ein fundamentales Konzept in der Theorie der kontextfreien Sprachen, das effizientes Parsing ermöglicht und wichtige Abschlusseigenschaften aufzeigt. Die korrekte Umwandlung in diese Form und das Verständnis ihrer Eigenschaften sind für das Studium und die Anwendung der theoretischen Informatik von großer Bedeutung.
 
 --- 
-# VL0-6b **CYK-Algorithmus**
+# VL0-6b CYK-Algorithmus
 
 <div style="position: relative; width: 100%; height: 0; padding-bottom: 56.25%;"><iframe src="https://www.youtube.com/embed/GNHuct1Lj1E" title="YouTube video player" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
@@ -239,7 +239,7 @@ Die Laufzeitkomplexität des CYK-Algorithmus ist $O(n^3 \cdot |P|)$, wobei $n$ d
 Der CYK-Algorithmus ist ein leistungsfähiges Werkzeug zur Entscheidung des Wortproblems für kontextfreie Sprachen, das durch seine Implementierung mit dynamischer Programmierung effizient und praktisch in der Anwendung ist.
 
 --- 
-# VL0-6c **Kellerautomaten**
+# VL0-6c Kellerautomaten
 
 <div style="position: relative; width: 100%; height: 0; padding-bottom: 56.25%;"><iframe src="https://www.youtube.com/embed/8Sw4xFD2hZQ" title="YouTube video player" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
