Quartz sync: May 28, 2024, 9:42 PM

--- a/content/4.Semester/Informatik/FSK/FSK-Vorlesungen/FSK-6-VL/FSK-6VL-28-05-2024.md
+++ b/content/4.Semester/Informatik/FSK/FSK-Vorlesungen/FSK-6-VL/FSK-6VL-28-05-2024.md
@@ -8,14 +8,9 @@ fach: "[[Formale Sprachen und Komplexität (FSK)]]"
 Thema: 
 Benötigte Zeit: 
 date created: Monday, 27. May 2024, 21:01
-date modified: Tuesday, 28. May 2024, 14:59
+date modified: Tuesday, 28. May 2024, 21:41
 ---
 
----
-
-Der unten stehende Teil wurde im Voraus aus dem Skript herausgearbeitet. Um zu den Notizen aus der Vorlesung zu kommen, scrolle runter.
-
----
 # VL 0-6a Die Greibach-Normalform und Eigenschaften von kontextfreien Sprachen
 
 <div style="position: relative; width: 100%; height: 0; padding-bottom: 56.25%;"><iframe src="https://www.youtube.com/embed/6kzcGvwmoXo" title="YouTube video player" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
@@ -71,6 +66,23 @@ Der unten stehende Teil wurde im Voraus aus dem Skript herausgearbeitet. Um zu d
 ## Einleitung
 
 Die Greibach-Normalform ist eine wichtige Form in der Theorie der formalen Sprachen, insbesondere im Bereich der kontextfreien Grammatiken. Sie spielt eine zentrale Rolle beim Parsing und der Analyse von Sprachen und ermöglicht effizientere Algorithmen zur Spracherkennung.
+
+
+## Leerheitsproblem
+
+>[!info] Satz
+>Das Leerheitsproblem für kontextfreie Grammatiken ist entscheidbar.
+
+>[!note] Beweis
+>Sei $G = (V, \Sigma, P, S)$ eine CFG mit 1. Sonderregel.
+>
+>Prüfe zunächst, ob $S \rightarrow \epsilon \in L(G)$. Wenn ja, dann ist $L(G)$ nicht leer.
+>
+>Sonst: Sei $G' = (V', \Sigma, P', S')$ eine CFG in Chomsky-Normalform mit $L(G') = L(G)$.
+>
+>Der folgende Algorithmus markiert alle $A \in V'$ mit $\{w \in \Sigma^* | A \Rightarrow_{G'}^* w\} \neq \emptyset$.
+>
+>Prüfe, ob $S'$ markiert wird. Wenn ja, dann ist $L(G) = L(G')$ nicht leer.
 
 ## Greibach-Normalform
 
@@ -241,6 +253,8 @@ Der CYK-Algorithmus ist ein leistungsfähiges Werkzeug zur Entscheidung des Wort
 --- 
 # VL0-6c Kellerautomaten
 
+<div style="position: relative; width: 100%; height: 0; padding-bottom: 56.25%;"><iframe src="https://www.youtube.com/embed/gXtiX7TuP_I" title="YouTube video player" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+
 <div style="position: relative; width: 100%; height: 0; padding-bottom: 56.25%;"><iframe src="https://www.youtube.com/embed/8Sw4xFD2hZQ" title="YouTube video player" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
 ## Themen
@@ -365,29 +379,3 @@ Kellerautomaten werden in der Analyse von Programmiersprachen, Netzwerken sowie 
 ## Zusammenfassung
 
 Kellerautomaten sind ein zentraler Bestandteil der Automatentheorie und spielen eine wesentliche Rolle in der Analyse und Verarbeitung kontextfreier Sprachen. Ihre Vielseitigkeit und Anpassungsfähigkeit ermöglichen tiefgreifende Anwendungen in der Informatik und darüber hinaus.
-
----
-
-<div style="display:flex; justify-content:center; border-style:solid; border-width:1px">
-Ab hier folgen Notizen aus der Vorlesung 
-</div>
-
----
-
-# VL 0-6a
-
-## Leerheitsproblem
-
->[!info] Satz
->Das Leerheitsproblem für kontextfreie Grammatiken ist entscheidbar.
-
->[!note] Beweis
->Sei $G = (V, \Sigma, P, S)$ eine CFG mit 1. Sonderregel.
->
->Prüfe zunächst, ob $S \rightarrow \epsilon \in L(G)$. Wenn ja, dann ist $L(G)$ nicht leer.
->
->Sonst: Sei $G' = (V', \Sigma, P', S')$ eine CFG in Chomsky-Normalform mit $L(G') = L(G)$.
->
->Der folgende Algorithmus markiert alle $A \in V'$ mit $\{w \in \Sigma^* | A \Rightarrow_{G'}^* w\} \neq \emptyset$.
->
->Prüfe, ob $S'$ markiert wird. Wenn ja, dann ist $L(G) = L(G')$ nicht leer.
