--- a/content/4.Semester/4.Semester.md
+++ b/content/4.Semester/4.Semester.md
@@ -4,7 +4,7 @@ tags:
   - 4semester
 fach:
 date created: Monday, 15. April 2024, 12:01
-date modified: Tuesday, 21. May 2024, 17:00
+date modified: Monday, 3. June 2024, 19:50
 ---
 
 # Modules
@@ -13,7 +13,7 @@ date modified: Tuesday, 21. May 2024, 17:00
 
 - [[Formale Sprachen und Komplexität (FSK)|FSK (Formale Sprachen und Komplexität)]] (in work)
 - [[Rechnernetze und Verteilte Systeme (RNVS)|RNVS (Rechnernetze und Verteilte Systeme)]] (in work)
-- [[IT-Kompetenz]]
+- [[IT-Kompetenz]] (done)
 - [[Bachelorseminar-Software Security]] (in work)
 
 ## Statistic Modules
@@ -36,11 +36,11 @@ These updates are intended to provide the most current and relevant content. I w
 <div id="disqus_thread"></div>
 <script>
     /**
-    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    * RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    * LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables */
     /*
     var disqus_config = function () {
-    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.url = PAGE_URL; // Replace PAGE_URL with your page's canonical URL variable
     this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
     };
     */
