Quartz sync: Jun 5, 2024, 11:31 PM

--- a/content/4.Semester/Informatik/FSK/FSK-Vorlesungen/FSK-7-VL/FSK-7VL-04-06-2024.md
+++ b/content/4.Semester/Informatik/FSK/FSK-Vorlesungen/FSK-7-VL/FSK-7VL-04-06-2024.md
@@ -7,7 +7,7 @@ fach: "[[Formale Sprachen und Komplexität (FSK)]]"
 Thema:
 Benötigte Zeit:
 date created: Tuesday, 4. June 2024, 11:49
-date modified: Tuesday, 4. June 2024, 12:58
+date modified: Wednesday, 5. June 2024, 19:45
 ---
 
 # Themen
@@ -55,3 +55,13 @@ $$
 ### Die akzeptierte Sprache von PDAs ist kontextfrei S.7-9
 
 ### Äquivalenz von kontextfreien Sprachen und von Kellerautomaten S.14
+
+# VL 7-b DPDAs
+
+## DPDA brauchen keinen Müllzustand
+
+## DPDAs effizientes Parsing
+
+# VL 3-c Turingmaschinen
+
+f
