Quartz sync: Jun 9, 2024, 5:57 PM

--- a/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-8VL-07-06-2024/RNVS-8VL-07-06-2024.md
+++ b/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-8VL-07-06-2024/RNVS-8VL-07-06-2024.md
@@ -7,8 +7,11 @@ fach: "[[Rechnernetze und Verteilte Systeme (RNVS)]]"
 Thema:
 Benötigte Zeit:
 date created: Friday, 7. June 2024, 09:30
-date modified: Friday, 7. June 2024, 10:51
+date modified: Friday, 7. June 2024, 15:49
 ---
+
+Anfang Kapitel 3 S. 150
+Ende Kapitel 4 S.63
 
 # Vorlesung Rechner, Netze und Verteilte Systeme - Kapitel 3: Transportschicht (Teil 7)
 
@@ -232,3 +235,32 @@ TCP Tahoe verwendet eine Kombination aus **Slow Start**, **Congestion Avoidance*
 ## 16. Können Sende- und Empfangsfenster bei der Fenstertechnik unterschiedlich groß sein?
 
 Ja, Sende- und Empfangsfenster können unterschiedlich groß sein. Der Grund dafür liegt in den unterschiedlichen Fähigkeiten und Speicherkapazitäten der Geräte. Ein Beispiel ist ein Supercomputer, der große Datenmengen senden kann, während ein Smartphone möglicherweise nur kleine Datenmengen empfangen kann. Die Fenstertechnik ermöglicht es, diese Unterschiede zu berücksichtigen und den Datenfluss entsprechend zu regulieren.
+
+<center>
+KAPITEL 3 ENDE
+</center>
+
+<!-- DISQUS SCRIPT COMMENT START -->
+
+<hr style="border: none; height: 2px; background: linear-gradient(to right, #f0f0f0, #ccc, #f0f0f0); margin-top: 4rem; margin-bottom: 5rem;">
+<div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://myuninotes.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
+<!-- DISQUS SCRIPT COMMENT END -->
